# book-vault

./: .dockerignore  .env.example  .gitignore  Caddyfile  Dockerfile  bookvault.postgres-local.toml  bookvault.postgres-s3.toml  bookvault.sqlite-local.toml  bookvault.sqlite-s3.toml  bookvault.toml.example  docker-compose.yml
api/: Cargo.toml
api/.cargo/: config.toml
api/migration/: Cargo.toml
api/migration/src/: lib.rs  m20250717_add_author_id_to_books.rs  m20250717_add_series_id_to_books.rs  m20250717_create_authors.rs  m20250717_create_bookmarks.rs  m20250717_create_series.rs  m20260717_011703_create_assets.rs  m20260717_011703_create_book_ir.rs  m20260717_011703_create_books.rs  m20260717_011703_create_comic_ir.rs  m20260717_011703_create_libraries.rs  m20260717_011703_create_sessions.rs  m20260717_011703_create_users.rs  m20260717_011706_create_annotations.rs  m20260717_011706_create_book_revisions.rs  m20260717_011706_create_job_queue.rs  m20260717_011706_create_reading_progress.rs  m20260717_011706_create_shelf_entries.rs  m20260717_011706_create_shelves.rs  m20260717_011707_add_keep_source.rs  m20260717_011708_create_book_metadata.rs  m20260718_add_user_preferences.rs  m20260718_create_linguistic_annotations.rs  m20260718_create_vocabulary_entries.rs  m20260719_create_dictionary_cache.rs  m20260719_create_vocab_example_sentences.rs  m20260720_create_kobo_tokens.rs
api/scripts/: refresh_wiktionary_fixtures.py
api/src/: config.rs  cover.rs  error.rs  lib.rs  main.rs
api/src/auth/: middleware.rs  mod.rs  rate_limit.rs  routes.rs  session.rs
api/src/db/: mod.rs
api/src/export/: epub.rs  markdown.rs  mod.rs  pdf.rs
api/src/ingest/: cbr.rs  cbz.rs  epub.rs  mobi.rs  mod.rs  pdf.rs
api/src/ir/: block.rs  mod.rs  span.rs
api/src/jobs/: worker.rs
api/src/koreader/: mod.rs
api/test_data/: ATTRIBUTION.md
api/test_modules/: annotations.rs  auth.rs  authors.rs  bookmarks.rs  books.rs  cbr_ingestion.rs  content_search.rs  edge_cases.rs  email.rs  epub_fuzzer.rs  export.rs  ingestion.rs  kobo_sync.rs  koreader_sync.rs  opds.rs  search_metadata.rs  series.rs  shelves.rs  studio.rs  tenant_isolation.rs  workflow.rs
api/tests/: annotations_test.rs  auth_test.rs  authors_test.rs  bookmarks_test.rs  books_test.rs  content_search_test.rs  edge_cases_test.rs  export_test.rs  integration.rs  search_metadata_test.rs  series_test.rs  shelves_test.rs  studio_test.rs  tenant_isolation_test.rs  workflow_test.rs
(+172 files in other folders)
