[workspace]
members = [".", "migration"]
resolver = "2"

[package]
name = "book-vault"
version = "0.1.0"
edition = "2021"

[lib]
name = "book_vault"
path = "src/lib.rs"

[features]
default = ["sqlite"]
sqlite = ["sea-orm/sqlx-sqlite", "migration/sqlite"]
postgres = ["sea-orm/sqlx-postgres", "migration/postgres"]

[dependencies]
migration = { path = "migration" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.5"
tower-http = { version = "0.7", features = ["cors", "trace", "fs", "limit"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
uuid = { version = "1", features = ["v7", "serde"] }
uuid7 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
sea-orm = { version = "2.0.0-rc", features = [
  "runtime-tokio-rustls",
  "macros",
  "with-chrono",
  "with-uuid",
  "with-json",
] }
argon2 = { version = "0.5", features = ["std"] }
rand = "0.9"
blake3 = "1.8"
hex = "0.4"
bytes = "1"
rmp-serde = "1"
zstd = "0.13"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
quick-xml = "0.41"
scraper = "0.27"
ammonia = "4"
zip = "8"
pdf-extract = "0.12"
epub-builder = "0.8"
pdf-writer = "0.15"
ts-rs = { version = "12", features = ["serde-compat", "chrono-impl", "uuid-impl"] }
toml = "1"
base64 = "0.22"
tempfile = "3"
lopdf = "0.44"
reqwest = { version = "0.13", features = ["json", "multipart", "cookies"] }
dashmap = "6"
aws-sdk-s3 = "1"
aws-config = "1"

[package.metadata.ts-rs]
dir = "../web/src/lib/api/generated"
