[package]
edition      = "2024"
name         = "migration"
publish      = false
rust-version = "1.85.0"
version      = "0.1.0"

[lib]
name = "migration"
path = "src/lib.rs"

[features]
default = ["sqlite"]
sqlite = ["sea-orm-migration/sqlx-sqlite"]
postgres = ["sea-orm-migration/sqlx-postgres"]

[dependencies]
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.sea-orm-migration]
version = "2.0.0-rc"
features = ["runtime-tokio-rustls"]
